trocando comentando js bugado

--- a/app/Livro.ipynb
+++ b/app/Livro.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Capítulo 1"
+    "# Python"
    ]
   },
   {
@@ -67,6 +67,21 @@
    "source": [
     "## Trabalhando com numpy\n",
     "- [Link para numpy notebook](./numpy.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Java"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trabalhando com java\n",
+    "- [Link para java notebook](./java.ipynb)\n"
    ]
   }
  ],
@@ -86,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
