--- a/app/Livro.ipynb
+++ b/app/Livro.ipynb
@@ -58,30 +58,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Python\n",
     "## Trabalhando com numpy\n",
-    "- [Link para numpy notebook](./numpy.ipynb)\n"
+    "- [Link para numpy notebook](./numpy.ipynb)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Java"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "# Java\n",
     "## Trabalhando com java\n",
-    "- [Link para java notebook](./java.ipynb)\n"
+    "- [Link para java notebook](./java.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "# Javascript\n",
+    "## Trabalhando com javascript\n",
+    "- [Link para javascript notebook](./javascript.ipynb)"
    ]
   }
  ],
@@ -101,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
