--- a/app/java.ipynb
+++ b/app/java.ipynb
@@ -30,7 +30,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.7+10-post-Ubuntu-3ubuntu1"
+   "version": "11.0.7+10-post-Ubuntu-2ubuntu218.04"
   }
  },
  "nbformat": 4,
